--- a/HTML/test02.html
+++ b/HTML/test02.html
@@ -29,25 +29,23 @@
       center: [0, 0],
       zoom: 2, 
       /**
-       * 投影: 是将三维行星上的位置坐标转换为二维平面的方法。
-       * 包括以下几种效果:
-       * 1.地球仪: globe，三维球体，从太空看地球(默认)
-       * 2.等面积投影: 区域相对大小是准确的，但形状扭曲。
-       * (1).equalEarth: 平等地球，纸片
-       * (2).albers: 凹型纸片
-       * 3.共型投影: 形状和角度准确，但尺寸变形。
-       * (1).lambertConformalConic: 半圆形纸片。
-       * 4.妥协投影: 尺寸和形状都失真。
-       * (1).winkelTripel: 平等地球，纸片
-       * (2).naturalEarth: 平等地球，纸片
-       * (3).equirectangular: 等距柱状
+       * 投影: 是将三维行星上的位置坐标转换为二维平面的方法。包括以下几种效果:
+       * 
+       * 专题预测: 弯曲的地图边缘营造出令人愉悦的圆形美感，让人联想到经典的世界地图。这些投影是全球范围内数据可视化的不错选择。
+       * equalEarth: 平等地球。一种伪圆柱、等积投影，具有直线纬度和曲线经度。准确地反映了大小，因此在进行区域大小比较很重要时。EqualEarth 投影的一个显着用途是 NASA 绘制的全球温度异常专题图。
+       * naturalEarth: 天然地球。一种伪圆柱投影，具有直线纬度和曲线经度。看起来很像 EqualEarth，但通过以少量尺寸变形为代价最大限度地减少形状变形，显示出更“自然”的外观。
+       * winkelTripel: 是一种伪方位角投影，纬度线略微向内弯曲。提供更准确的形状但尺寸不太准确。不适用于比较纬度很重要的地图。
+       * 
+       * 圆锥投影: 创建的地图在特定点周围的区域几乎没有失真。远离该点，失真增加。
+       * albers: 提供了准确的相对大小，但形状在更远的距离上会越来越扭曲。
+       * lambertConformalConic: 用于航空图和许多区域制图系统。可以准确地表示形状和角度。相反，远离中心的区域的大小越来越大。
       */
       projection: 'naturalEarth' // 在构造器中设置投影
     });
 
     // 修改投影方法: setProjection
     map.setProjection({
-      name: 'globe'
+      name: 'lambertConformalConic'
     })
 
     // 获取当前投影: getProjection
